feat: Update Profile and Update Password and User Refactor
