# src/controllers/auth.controller.ts
@@ -1,64 +1,68 @@
 import { Request, Response } from "express";
 import * as Yup from "yup";
-import UserModel from "../models/user.model";
+import UserModel, {
+  userDTO,
+  userLoginDTO,
+  userUpdatePasswordDTO,
+} from "../models/user.model";
 import { encrypt } from "../utils/encryption";
 import { generateToken } from "../utils/jwt";
 import { IReqUser } from "../utils/interfaces";
 import response from "../utils/response";
 
-type TRegister = {
-  fullName: string;
-  username: string;
-  email: string;
-  password: string;
-  confirmPassword: string;
-};
-
-type TLogin = {
-  identifier: string;
-  password: string;
-};
-
-const registerValidateSchema = Yup.object({
-  fullName: Yup.string().required(),
-  username: Yup.string().required(),
-  email: Yup.string().required(),
-  password: Yup.string()
-    .required()
-    .min(6, "Password must be at least 6 characters")
-    .test(
-      "at-least-one-uppercase-letter",
-      "Contains at least one uppercase character",
-      (value) => {
-        if (!value) return false;
-        const regex = /^(?=.*[A-Z])/;
-        return regex.test(value);
-      }
-    )
-    .test("at-least-one-number", "Contains at least one number", (value) => {
-      if (!value) return false;
-      const regex = /^(?=.*\d)/;
-      return regex.test(value);
-    }),
-  confirmPassword: Yup.string()
-    .required()
-    .oneOf([Yup.ref("password"), ""], "Password not Matched!"),
-});
-
 export default {
-  async register(req: Request, res: Response) {
-    /**
-     #swagger.tags = ['Auth']
-      #swagger.requestBody = {
-      required: true,
-      schema: {$ref: "#/components/schemas/RegisterRequest"}
-     }
-    */
-    // Get property body from req
-    const { fullName, username, email, password, confirmPassword } =
-      req.body as unknown as TRegister;
+  async updateProfile(req: IReqUser, res: Response) {
     try {
-      await registerValidateSchema.validate({
+      const userId = req.user?.id;
+      const { fullName, profilePicture } = req.body;
+      const result = await UserModel.findByIdAndUpdate(
+        userId,
+        {
+          fullName,
+          profilePicture,
+        },
+        {
+          new: true,
+        }
+      );
+      if (!result) return response.notFound(res, "User Not Found");
+      response.success(res, result, "Profile Updated Successfully!");
+    } catch (error) {
+      response.error(res, error, "Failed to Update Profile");
+    }
+  },
+  async updatePassword(req: IReqUser, res: Response) {
+    try {
+      const userId = req.user?.id;
+      const { oldPassword, password, confirmPassword } = req.body;
+      await userUpdatePasswordDTO.validate({
+        oldPassword,
+        password,
+        confirmPassword,
+      });
+      const user = await UserModel.findById(userId);
+      if (!user || user.password !== encrypt(oldPassword))
+        return response.notFound(res, "User Not Found!");
+
+      const result = await UserModel.findByIdAndUpdate(
+        userId,
+        {
+          password: encrypt(password),
+        },
+        {
+          new: true,
+        }
+      );
+      response.success(res, result, "Password Updated Successfully!");
+    } catch (error) {
+      response.error(res, error, "Failed to Update Password");
+    }
+  },
+  async register(req: Request, res: Response) {
+    // Get property body from req
+    const { fullName, username, email, password, confirmPassword } = req.body;
+    try {
+      await userDTO.validate({
         fullName,
         username,
         email,
@@ -78,15 +82,12 @@ export default {
     }
   },
   async login(req: Request, res: Response) {
-    /**
-     #swagger.tags = ['Auth']
-     #swagger.requestBody = {
-      required: true,
-      schema: {$ref: "#/components/schemas/LoginRequest"}
-     }
-     */
-    const { identifier, password } = req.body as unknown as TLogin;
     try {
+      const { identifier, password } = req.body;
+      await userLoginDTO.validate({
+        identifier,
+        password,
+      });
       // ambil data user berdasarkan identifier -> email OR username
       // use $or to check only one
       const userByIdentifier = await UserModel.findOne({
@@ -122,28 +123,15 @@ export default {
     }
   },
   async me(req: IReqUser, res: Response) {
-    /**
-     #swagger.tags = ['Auth']
-     #swagger.security = [{
-      "bearerAuth": []
-     }]
-     */
     try {
       const user = req.user;
       const result = await UserModel.findById(user?.id);
       response.success(res, result, "Success! Authorized to get User Profile");
     } catch (error) {
-      response.success(res, error, "Failed to get User Profile!");
+      response.error(res, error, "Failed to get User Profile!");
     }
   },
   async activation(req: Request, res: Response) {
-    /**
-     #swagger.tags = ['Auth']
-     #swagger.requestBody = {
-      required: true,
-      schema: {$ref: '#/components/schemas/ActivationRequest'}
-     }
-     */
     try {
       const { code } = req.body as { code: string };
       const user = await UserModel.findOneAndUpdate(
